// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchCriteriaBreadcrumb > should display a link to each ascendant folder plus a link to search in root folder 1`] = `
<p
  class="document-search-breadcrumbs"
>
  <span
    class="document-search-breadcrumbs-label"
  >
    Searching in
  </span>
  
  
  
  <!--v-if-->
  <a
    class="document-search-breadcrumbs-crumb tlp-badge-secondary tlp-badge-outline"
  >
    Foo
  </a>
  
  
  <i
    aria-hidden="true"
    class="fa-solid fa-chevron-right document-search-breadcrumbs-separator"
  />
  <a
    class="document-search-breadcrumbs-crumb tlp-badge-secondary tlp-badge-outline"
  >
    Bar
  </a>
  
  
  <span
    class="document-search-breadcrumbs-final-separator"
  >
    .
  </span>
  <a>
    Search in whole project documentation
  </a>
   . 
  
</p>
`;

exports[`SearchCriteriaBreadcrumb > should display a spinner while ascendant hierarchy is loading 1`] = `
<p
  class="document-search-breadcrumbs"
>
  <span
    class="document-search-breadcrumbs-label"
  >
    Searching in
  </span>
  <i
    aria-hidden="true"
    class="fa-solid fa-circle-notch fa-spin"
  />
</p>
`;
